<resources>
    <string name="app_name">Palm FA Mitra</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="requests">Requests</string>
    <string name="kannada_str">Kannada</string>
    <string name="btn_kn">Kannada</string>
    <string name="chooselanguage">Choose Language</string>
    <string name="choose_language_str">Choose Language</string>
    <string name="telugu_str">తెలుగు</string>
    <string name="FA_login">FA Login</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="err_please_enter_username">Please Enter Username</string>
    <string name="err_please_enter_password">Please Enter Password</string>
    <string name="Invalid_user">Username Or Password Wrong , Please Try Again</string>
    <string name="Invalid_details">Invalid Details , Please Try Again</string>
    <string name="english_str">English</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="terms_conditionss">Rate Chart - Terms &amp; Conditions</string>
    <string name="terms_conditions">I Agree Terms &amp; Conditions</string>
    <string name="terms_conditionsss">Terms &amp; Conditions</string>
    <string name="terms_agree">Please Agree Terms &amp; Conditions</string>
    <string name="convenience_charge">Transaction Fee (Rs)</string>
    <string name="total_amt_pay">Total (Rs)</string>
    <string name="otp_desc">Enter the 6 Digits Code Sent your Registered Mobile Number(s)</string>
    <string name="otp_sent">OTP Sent</string>
    <string name="submit">SUBMIT</string>
    <string name="submit_req">Submit Request</string>
    <string name="view">Views</string>
    <string name="payment_summary">Payment Summary</string>
    <string name="recommendations">Recommendations</string>
    <string name="recommendationss">Crop Maintenance Visits</string>
    <string name="payments">Grower Ledger</string>
    <string name="bank_details">Bank Details</string>
    <string name="bank_holder">Account Holder \nName</string>
    <string name="bank_name">Bank Name</string>
    <string name="account_no">Account Number</string>
    <string name="branch_name">Branch Name</string>
    <string name="ifsc">IFSC Code</string>
    <string name="next">Next</string>
    <string name="req_services">Request Services</string>
    <string name="labour">Labour Request</string>
    <string name="labour_duration">Package </string>
    <string name="ffb_flot">Quickpay Rate (Rs)</string>
    <string name="amount_of_FFB">Quickay Cost (Rs)</string>
    <string name="quickpay_details">QuickPay Details</string>
    <string name="collectionsdetails">Collection(s) Details</string>
    <string name="ffbratenorthere"><![CDATA[<p>One of your Collections does not have <b>Quick Pay Rate</b>. Due to which QuickPay Request cannot be raised</p>]]></string>
    <string name="confirm_req">Confirm Request</string>
    <string name="pole">Equipment</string>
    <string name="fertilizer">Fertilizer</string>
    <string name="loan">Loan</string>
    <string name="biolab">Bio Lab</string>
    <string name="quickPay">QuickPay Request</string>
    <string name="quick">QuickPay</string>
    <string name="visit">Visit</string>
    <string name="req_visit">Visit Request</string>
    <string name="learning">Learning</string>
    <string name="time_peroid">Time Peroid</string>
    <string name="from_date">From Date *</string>
    <string name="to_date">To Date *</string>
    <string name="collection_id">Collection ID</string>
    <string name="date">Start Date</string>
    <string name="weight">Weight</string>
    <string name="cc">CC</string>
    <string name="status">Status</string>
    <string name="req_loan">Loan Request</string>
    <string name="plot_id">Plot ID</string>
    <string name="plot_size">Plot Size</string>
    <string name="village">Village</string>
    <string name="comments">Comments</string>
    <string name="plot_code">Plot Code</string>
    <string name="code">Code</string>
    <string name="select_labour_type">Labour Service</string>
    <string name="select_labour_ltype">Labour Service</string>
    <string name="net_weight">Net weight</string>
    <string name="date_label">Date</string>
    <string name="location">Location</string>
    <string name="locationn">Location :</string>
    <string name="land_mark">Landmark</string>
    <string name="landmark">Landmark</string>
    <string name="closingBal">Dues (Rs)</string>
    <string name="language_notification">Language Setup Completed</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_off">Logout</string>
    <string name="tap_text">Please Select Language Below:</string>
    <string name="btn_en">English</string>
    <string name="btn_te">Telugu</string>
    <string name="only_date">Date</string>
    <string name="no_videos">No Videos Available</string>
    <string name="remarks">Remarks</string>
    <string name="quantity">Quantity</string>
    <string name="ffb_qty">Total FFB Qty (MT)</string>
    <string name="ffb">FFB Qty (MT)</string>
    <string name="adhoc_rate">Adhoc Rate per MT (Rs)</string>
    <string name="invoice_rate">Invoice Rate per MT (Rs)</string>
    <string name="memo">Memo</string>
    <string name="amount">Amount (Rs)</string>
    <string name="harv_amount">Harvesting Amount/Ton(Rs)</string>
    <string name="pru_amount">Pruning Amount/Tree(Rs)</string>
    <string name="paidCollectionsWeight">Paid Collections Weight</string>
    <string name="no_collections_found">No Collections Available</string>
    <string name="no_payments_found">No Payments Found</string>
    <string name="i_have_agree">I Agree</string>
    <string name="measurement">Age</string>
    <string name="startDate">Preferred Date</string>
    <string name="starttDate"> Preferred Date</string>
    <string name="totalBalance">Closing Balance (Rs)</string>
    <string name="balance">Balance (Rs)</string>
    <string name="collectionsWeight">Total Net Weight </string>
    <string name="collectionsCount">Total Collections</string>
    <string name="unPaidCollectionsWeight">Unpaid Collections Weight </string>
    <string name="gr">GR Amount (Rs)</string>
    <string name="adjusted">Adjusted (Rs)</string>
    <string name="loan_req">Request for Loan</string>
    <string name="loan_message">1. Quick Pay is a special feature provided by 3F Oil Palm so that Our farmers can get payment for their FFB supplied within 24 hrs.
    \n2. Complete calculation and value of payment will be mentioned in the receipt in the app. The receipt requires a digital signature of the farmer which signifies agreement to all terms and conditions. In case a 3FOP representative is raising a Quick Pay request on behalf of the farmer, then a 4 digit PIN number will be sent to the registered mobile number of the farmer. This will act as the confirmation to the agreement to all terms and conditions.
    \n3. To avail this offer, there is a flat transaction fee On actuals and per ton Quick Pay fee.
    \n4. Quick Pay will be paid based on the prevalent adhoc rate.In case adhoc rate is not yet known,Quick Pay will be based on an assumed adhoc rateBut it will be adjusted based on Government Order rate,
    As and when declared. When the Invoice Rate is declared,That adjustment will also take place, and will be paid Or deducted along with future payments (normal or Quick Pay).
    \n5. At least 1 unpaid collection is required in order to request for Quick Pay.In case of more than 1 unpaid collection,Quick Pay request will happen on all pending unpaid collections.
    \n6. All deductions from farmer or pending payments to farmer such as rate adjustments,Fertilizers, poles and labour requests that were done against FFB and are due by theFarmer to the company before the date of request of Quick Pay Will be reduced from the FFB payment while making Quick Pay payment.
    \n7. In order to be eligible for Quick Pay,FFB payment value should be greater than any against FFB deductions.
    \n8. If Quick Pay has already been requested,Another Quick Pay request cannot be requested until the 1st one is completed.
    \n9. Once Quick Pay has been requested, it cannot be cancelled.
    \n10. Quick Pay is not available on the date on which the company is processing regular farmer’s payment.Those dates will come twice a month according to regular pay cycle.
    \n11.In case labour service or product purchase done recently against FFB,it might not show in this payout statementbecause it is still under process. However,it will be deducted during</string>
    <string name="got_it">Got It</string>
    <string name="unpaidCollection">Unpaid Collections</string>
    <string name="labour_lable">Labour</string>
    <string name="no_req_found">No Requests Found</string>
    <string name="no_unpaid_collections">Unpaid Collections are not Found</string>
    <string name="service">Service Charges </string>
    <string name="charge">% extra.\nThe charges will be deducted from the FFB payment in the next payment cycle</string>
    <string name="total_records">Total Records</string>
    <string name="quantity_mt">Quantity (MT)</string>
    <string name="collection_Id">Collection Id</string>
    <string name="no_pdfs">No Pdfs Available</string>
    <string name="dosage_only">Dosage</string>
    <string name="treesAppearance">Trees Appearance</string>
    <string name="treeGrowth">Tree Growth</string>
    <string name="treeHeight">Tree Height</string>
    <string name="fruitColor">Fruit Color</string>
    <string name="fruitSize">Fruit Size</string>
    <string name="fruitHyegiene">Fruit Hygiene</string>
    <string name="plantationType">Plantation Type</string>
    <string name="health_crop">Health of Plantation Details</string>
    <string name="uprrot_crop">Uprootment Details</string>
    <string name="spalingPlanted">No.of Saplings Planted</string>
    <string name="prevPalmsCount">Previous Trees Count</string>
    <string name="plamsCount">Current Trees Count</string>
    <string name="isTreesMissing">Missing Trees</string>
    <string name="missingTreesCount">No.of Missing Trees</string>
    <string name="reasonType">Reason for Missing Trees</string>
    <string name="expectedPlamsCount">Expected Palms Count</string>
    <string name="crop">Crop Maintenance Visit</string>
    <string name="recommended_ertilizer">Recommended Fertilizer</string>
    <string name="UOMName">UOM Name</string>
    <string name="LastUpdatedDate">Last Updated Date</string>
    <string name="fert_rec">Fertilizer Recommendation Details</string>
    <string name="Chemical">Chemical</string>
    <string name="confirmation">Confirmation</string>
    <string name="farmar_id"> Enter Farmer Id</string>
    <string name="welcome">Welcome</string>
    <string name="login">Login</string>
    <string name="scan_qr">Scan QR</string>
    <string name="fertilizerSource">Fertilizer Source</string>
    <string name="fertilizer_name">Fertilizer Name</string>
    <string name="lastAppliedDate">Last Applied Date</string>
    <string name="applyFertilizerFrequencyType">Apply Fertilizer Frequency</string>
    <string name="or">OR</string>
    <string name="intercrop_prunning">Pruning With Intercrop\nAmount/Tree (Rs)</string>
    <string name="harv_intercrop">Harvesting With Intercrop\nAmount/Ton (Rs)</string>
    <string name="farmer_log_off">Farmer Logout</string>
    <string name="fA_logout">Field Assistant Logout</string>
    <string name="inter_coco">\u2022 Matured Cocoa as Intercrop Poses Additional Labour Charges.\n\u2022 Farmer has to engage loading and transport Labour after harvesting is done.\n\u2022 For off season, minimum billing is for 1 Ton of harvest as per age of garden, irrespective of actual quantity harvested. Definition of off season and reason will differ year to year based on ground realities. Please ask your cluster officer for any clarity.</string>
</resources>