<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:layout_weight="1"
android:orientation="vertical"
tools:context="in.calibrage.palm360fa.Views.Activities.Farmar_Login">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/appbg"
    android:foreground="@color/half_black2" />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerVertical="true"
    android:orientation="vertical">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_user" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/hind_semibold"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25dp" />

    <EditText
        android:textAllCaps="true"
        android:id="@+id/farmer_id_edittxt"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/edt_bg"
        android:fontFamily="@font/hind_semibold"
        android:hint="@string/farmar_id"
android:maxLength="20"
        android:maxEms="50"
        android:maxLines="1"
        android:inputType="textCapCharacters"
        android:nextFocusDown="@id/btn_login"
        android:paddingLeft="5dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/light_gray2"
        android:textSize="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_margin="5dp"

        android:gravity="center_vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="5dp"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingTop="@dimen/_8dp"
            android:weightSum="1">

            <Button
                android:id="@+id/btn_login"
                style="@style/Common_Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/hind_semibold"
                android:gravity="center"
                android:text="@string/or"
                android:textColor="@color/white_new"
                android:textSize="18dp" />

            <Button
                android:id="@+id/btn_qrscan1"
                style="@style/Common_Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:text="@string/scan_qr" />

        </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:visibility="gone"
        android:fontFamily="@font/hind_semibold"
        android:text="@string/fA_logout"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/margin_20"
        android:id="@+id/fa_logout"
        android:textColor="@color/white"
        android:textSize="20dp" />
</LinearLayout>

</RelativeLayout>
